# CS_Fundamentals

./: CMakeLists.txt
Algorithm/: Main.cpp  MergeSort.h  QuickSort.h  RandomNumberGen.h
Timer/: Timer.cpp  Timer.h
