cmake_minimum_required(VERSION 3.0.0)
project(C++ VERSION 0.1.0)
add_executable(${PROJECT_NAME} Algorithm/Main.cpp)
if(MSVC)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
else(MSVC)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
endif(MSVC)
